[gd_scene load_steps=6 format=3 uid="uid://bs72ogkvdd7d6"]

[ext_resource type="Script" uid="uid://cmihbc6jrfewp" path="res://addons/proto_controller/proto_controller.gd" id="1_ucva2"]
[ext_resource type="Script" uid="uid://dfv437lkwvdqi" path="res://addons/proto_controller/boots_component.gd" id="2_wr06p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_iof21"]
albedo_color = Color(0.91806, 0.575202, 0.222449, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ucva2"]
radius = 0.4
height = 1.8

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iof21"]
radius = 0.4
height = 1.8

[node name="ProtoController" type="CharacterBody3D"]
script = ExtResource("1_ucva2")
can_sprint = true

[node name="BootsComponent" type="Node" parent="."]
script = ExtResource("2_wr06p")

[node name="Mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
material_override = SubResource("StandardMaterial3D_iof21")
cast_shadow = 0
mesh = SubResource("CapsuleMesh_ucva2")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_iof21")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="Button_0" type="Button" parent="."]
offset_left = 31.0
offset_top = 92.0
offset_right = 167.0
offset_bottom = 227.0

[node name="Button_1" type="Button" parent="."]
offset_left = 873.0
offset_top = 91.0
offset_right = 1139.0
offset_bottom = 242.0

[node name="Button_2" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Button_0" to="BootsComponent" method="_on_button_0_pressed"]
[connection signal="pressed" from="Button_1" to="BootsComponent" method="_on_button_1_pressed"]
[connection signal="pressed" from="Button_2" to="BootsComponent" method="_on_button_2_pressed"]
